--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <title>Hello</title>
+    <style>
+        body{
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
     Hello World!
