--- a/gitnotes.html
+++ b/gitnotes.html
@@ -25,6 +25,8 @@
 <li>git commit -m "add a text message"</li>
 <li>git status</li>
 <li>git commit -am "message here"</li>
+<li>git pull</li>
+<li>git log</li>
     </ul><br>
 <h2>Git Setup</h2>
     <p>Git Clone - Take a repository from the internat (GitHUb) and download it onto my own computer.<br>
@@ -35,11 +37,12 @@
 <h2>Using Git</h2>
         <p> Git Add - tells git that I want to add a file and track it (eg: git add hello.html) it doesn't make the commit, just lets git know.<br>
             Git Commit - tells git to make the copy online and keep track of changes, the messsgae helps you remember the version. You add a comment.<br>
-            <b>Note: Both of these changes occur locally. If you want to see them online, you must push the changes to the GitHub </b>
+            <b>Note: Both of these changes occur locally. If you want to see them online, you must push the changes to the GitHub </b><br>
             Git Push - sends all the changes to the online GitHub, now you can see the files online and even open them<br>
             Git Status - tells me what is currently going on with my git. It says which location, branch and how it is all working<br>
-            Git Commit am - combines the add and commit statements together and tells git to add all the files that have been changed.
-
+            Git Commit am - combines the add and commit statements together and tells git to add all the files that have been changed.<br>
+            Git Pull - gets the latest version from GitHUb and puts it on my local machine<br>
+            Git log - kep track of all the changes you have made over time<br>
         </p>
     
         <h1>Some Terminal Command - I already know most of these</h1>
