--- a/gitnotes.html
+++ b/gitnotes.html
@@ -27,6 +27,11 @@
 <li>git commit -am "message here"</li>
 <li>git pull</li>
 <li>git log</li>
+<li>git reset --hard (add the hash code to go back to)</li>
+<li>git branch</li>
+<li>git checkout -b (name the branch)</li>
+<li>git checkout master</li>
+<li>git merge (name)</li>
     </ul><br>
 <h2>Git Setup</h2>
     <p>Git Clone - Take a repository from the internat (GitHUb) and download it onto my own computer.<br>
@@ -43,6 +48,12 @@
             Git Commit am - combines the add and commit statements together and tells git to add all the files that have been changed.<br>
             Git Pull - gets the latest version from GitHUb and puts it on my local machine<br>
             Git log - kep track of all the changes you have made over time<br>
+            Git reset - take the current state of the depository and revert it back to an older version (git reset --hard (then add the hash code))
+            Git Branch - tells me which branch i'm on and what exists in my repository<br>
+            Git checkout -b (name) - creates a new brach and switchs to it - now any changes will only change on the new branch, not the master branch<br>
+            Git checkout masetr - will switch back to the master branch<br>
+            Git merge (name) - will take th changes from the second branch and try to merge it with the master branch<br>
+
         </p>
     
         <h1>Some Terminal Command - I already know most of these</h1>
@@ -51,13 +62,6 @@
     <li>cd (Change Directory)</li>
     <li>cd.. (Change directory back to root dir)</li>
     <li>touch (creates a new file - eg <b>touch hello.html</b> creates a file called hello.html)</li>
-    <li>ADD</li>
-    <li>ADD</li>
-    <li>ADD</li>
-    <li>ADD</li>
-    <li>ADD</li>
-    <li>ADD</li>
-    <li>ADD</li>
         </ul><br>
 
 </body>
